Bug 147925 - Cursor scrolling back to comment when clicking outside of comment since LO 7.3
Summary: Cursor scrolling back to comment when clicking outside of comment since LO 7.3
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.3.1.3 release
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:7.4.0 target:7.3.3
Keywords: possibleRegression
Depends on:
Blocks: Apple, because, Libre, of, Office, opening, problem, Writer-Comments
  Show dependency treegraph
 
Reported: 2022-03-11 14:36 UTC by Rafael Lima
Modified: 2022-04-05 08:51 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Video showing the bug (2.44 MB, video/mp4)
2022-03-11 14:36 UTC, Rafael Lima
Details
Sample ODT file (60.35 KB, application/vnd.oasis.opendocument.text)
2022-03-11 14:37 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2022-03-11 14:36:06 UTC
Created attachment 178816 [details]
Video showing the bug

Since LibreOffice 7.3, editing a comment and clicking outside the comment will make LibreOffice scroll back to the comment.

Steps to reproduce:
1) Create a comment
2) Edit its contents and leave the cursor inside the comment
3) Scroll the document (up or down)
4) Click anywhere in the document text
5) Note that the document will scroll back to where the comment is instead of placing the cursor where the user actually clicked

See the attached sample file and video showing the bug.

This is most likely a regression, since it happens in LO 7.3 but does not happen in LO 7.2.5.

PRESENT IN:
Version: 7.3.1.3 / LibreOffice Community
Build ID: 30(Build:3)
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 1:7.3.1~rc3-0ubuntu0.21.10.1~lo2
Calc: threaded

NOT PRESENT IN:
Version: 7.2.5.2 / LibreOffice Community
Build ID: 499f9727c189e6ef3471021d6132d4c694f357e5
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: threaded
Comment 1 Rafael Lima 2022-03-11 14:37:02 UTC
Also present in the master branch:

Version: 7.4.0.0.alpha0+ / LibreOffice Community
Build ID: 2c13433ed38e08be60824f21a73ba29f78b9520f
CPU threads: 16; OS: Linux 5.13; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL
Comment 2 Rafael Lima 2022-03-11 14:37:35 UTC
Created attachment 178817 [details]
Sample ODT file

This is the file used in the video.
Comment 3 Dieter 2022-03-24 06:11:42 UTC
I confirm it with

Version: 7.3.1.3 (x64) / LibreOffice Community
Build ID: a69ca51ded25f3eefd52d7bf9a5fad8c90b87951
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL
Comment 4 Rafael Lima 2022-04-01 18:36:00 UTC
@Jim, any chances this bug is related to the work being done in the Navigator?
Comment 5 Jim Raykowski 2022-04-02 06:28:07 UTC
Hi Rafael, 

Nothing to do with recent Navigator hacks but nonetheless a regression caused by moi in the patch to fix bug 145747.

Here is a stab that doesn't cause scroll back to happen:
https://gerrit.libreoffice.org/c/core/+/132451

Reason it showed up in 7.3 is it was backported. This made it a bit confusing to track down due to the 7.3 bibisect repository I have doesn't include the backport of the patch that causes the regression.
Comment 6 Commit Notification 2022-04-03 19:18:57 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/2d6af46a82c6b9f1565933e8a1175e7a184256ca

tdf#147925 fix view scrolling back to comment

It will be available in 7.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Rafael Lima 2022-04-04 12:02:28 UTC
Hi Jim! Thanks, it worked in the master branch.

I believe this should be cherry-picked for 7.3 as well.
Comment 8 steve 2022-04-04 20:32:44 UTC
Setting to verified as per comment 7
Comment 9 Commit Notification 2022-04-05 08:51:49 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "libreoffice-7-3":

https://git.libreoffice.org/core/commit/3d76a0edad1f10f846de59fbd706c2cd395b74c6

tdf#147925 fix view scrolling back to comment

It will be available in 7.3.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.