tdf#147925 fix view scrolling back to comment

fixes regression caused by fix done for commit
85057da7f19e8e5d6023c16fa07d138e2b519a66

Change-Id: I427513bd920f4e0047c64210feecfeac22ecfd10
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/132451
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>
(cherry picked from commit 2d6af46a82c6b9f1565933e8a1175e7a184256ca)